test(gates): gate 4 passes -- gradlew test green, 28/28, verified independently
Captain re-ran the full unit suite with --rerun-tasks and read the JUnit XML
directly rather than trusting the summary:
  CavaConfigTest 5, ffm.LayoutHashTest 5, parity.Fnv1aTest 5,
  parity.GoldenTraceTest 3, parity.TraceDiffTest 5, subsystem.CanaryTest 5
  => 28 tests, 0 failures, 0 errors, BUILD SUCCESSFUL.

The jar really carries the payload: cava-0.1.0.jar (667165 B, 33 classes) contains
natives/windows-x64/cava.dll (2780964 B) plus fabric.mod.json and both mixin configs.

One measurement worth keeping straight: after Loom's remap, cava/ffm/CavaBindings
still reads major 65 minor 65535, while NativeLibrary and TickSampler read minor 0.
--enable-preview is a compile-time gate on java.lang.foreign, and only classes that
actually use preview API members carry the 65535 flag -- so "count the preview
classes in the jar" is the wrong metric; the compileJava note is the right one.

Also recorded two harmless local noises so nobody chases them: Gradle's file watcher
cannot start under the sandbox (add --no-watch-fs), and the three
org.gradle.java.installations.paths fallback candidates only produce notices.